K8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-server
spec:
  replicas: 3
  selector:
    matchLabels:
      name: multi-K8s-server    
  template:
    metadata:
      labels:
        name: multi-K8s-server
    spec:
      containers:
        - name: multi-server-container
          image: stephengrider/multi-server
          resources:
              limits:
                memory: "50Mi"
                cpu: "50m"
          ports:
            - containerPort: 5000
